--- a/style.css
+++ b/style.css
@@ -371,12 +371,12 @@ section .title::after{
     width: 70%;
 }
 .skills-content .right .js::before{
-    width: 70%;
+    width: 60%;
 }
-.skills-content .right .php::before{
-    width: 50%;
+.skills-content .right .react::before{
+    width: 60%;
 }
-.skills-content .right .mysql::before{
+.skills-content .right .bootstrap::before{
     width: 50%;
 }
 
